--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs:
     docker:
       - image: circleci/python:3.6.2-stretch-browsers
         auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+          username: kalpeshthakare
+          password: kalpesh@1709  # context / project UI env-var reference
     steps:
       - checkout
       - restore_cache:
